Don't collapse timetable borders; avoid rowspan issues

--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@ input#optYear + label {
 }
 
 #resTimetable {
-  border-collapse: collapse;
   text-align: center;
   table-layout: fixed;
 }
